i did this in order to learn github and bash

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Basic Calculator</title>
   </head>
+  <!-- me isme changes kr rha hu github seekhne ke lie just nothhing else... -->
   <body>
     <div class="calculator">
       <input type="text" id="display" disabled />
